# xAgent

./: .env.example  .gitignore  GOAL.md  README.md  README_ZH.md  TECHNICAL.md  agents.md  code-review-findings.md  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  start.sh
api/: health.py  lookup.py  main.py  vocabulary.py
config/: abcd_config.yaml  agent.yaml  myagent_config.yaml
consult/: 01_architecture_analysis.md  02_code_quality.md  03_performance_optimization.md  04_security.md  05_agent_capabilities.md  06_memory_system.md  07_workflow_orchestration.md  08_observability.md  09_testing_strategy.md  10_developer_experience.md  README.md
core/: agent.py  base.py  conversation.py  lookup.py  session.py  vocabulary.py
db/: message_db.py  vocabulary_db.py
desktop/: README.md  package-lock.json  package.json
docs/: CLI_USAGE.md  README.md  api_reference.md  architecture.md  best_practices.md  configuration_reference.md  getting_started.md  graph_workflow_guide.md  http_server_agent_passing.md  linux_philosophy_optimization.md  memory.md  message_storage_inheritance.md  redis_cluster_support.md  runtime-flow.md  workflow_dsl.md  workflows.md  xagent-launcher-guide.md
examples/: README.md  agent_as_tool.py  basic_chat.py  best_practices.py  custom_tools.py  demo_extended_features.py  dsl_integration_test.py  graph_workflow_example.py  http_agent_call.py  http_agent_start.py  hybrid_quick_start.py  mcp_integration.py  new_agent_usage.py  redis_persistence.py  run_agent.py  stream_chat.py  structured_output.py  sub_agents.py  tool_development_guide.py  weather_tool_example.py  workflow_dsl_example.py  workflow_example.py  workflow_parallel_example.py  workflow_sequential_example.py
frontend/: README.md  chat_app.py  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
notebooks/: test.ipynb
schemas/: messages.py  vocabulary.py
test/: test_lookup_api.py  test_vocabulary_db.py
tests/: __init__.py  test_agent.py  test_agent_chat_flow.py  test_agent_config.py  test_agent_identity_api.py  (+68 more)
(+621 files in other folders)
