[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myxagent"
version = "0.3.10"
description = "Independent AI Agent with Persistent First-Person Memory and Multi-User Interaction"
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE*"]
authors = [{ name = "ZJun", email = "zhangjun310@live.com" }]
keywords = ["ai", "agent", "openai", "chatbot", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    # Core frameworks
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    
    # AI/ML and agents
    "openai>=1.98.0",
    "anthropic>=0.64.0",
    "langfuse>=3.0.0",
    "cryptography>=42.0.0",
    
    # HTTP clients
    "httpx>=0.28.0",
    "websockets>=12.0",
    "requests>=2.32.0",
    "trafilatura>=2.0.0",
    
    # Utilities
    "lxml[html-clean]>=5.0.0",
    "lark-oapi>=1.5.5",
    "qrcode[pil]>=7.4.2",
    "pillow>=10.0.0",
    "posthog>=3.6.0",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.20",
    "readchar>=4.2.1",
    "rich>=13.9.4",
    "sounddevice>=0.5.0",
    "python-socks>=2.4.0",
    "tenacity>=9.1.2",
    "watchdog>=6.0.0",
    "websockets>=14.0",
]

[project.scripts]
xagent = "xagent.interfaces.cli:main"

[project.urls]
Repository = "https://github.com/ZJCODE/xagent"
Issues = "https://github.com/ZJCODE/xagent/issues"
Homepage = "https://github.com/ZJCODE/xagent#readme"

[tool.setuptools]
packages = {find = {include = ["xagent*"], exclude = ["examples*", "tests*", "docs*"]}}

[tool.setuptools.package-data]
xagent = ["interfaces/static/**", "components/skills/builtin/**"]
